--- a/src/main/resources/com/calculator/calculator-view.fxml
+++ b/src/main/resources/com/calculator/calculator-view.fxml
@@ -4,8 +4,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="500.0" maxWidth="800.0" minHeight="500.0" minWidth="800.0"
-          prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17"
-          fx:controller="com.example.controller.Controller">
+          prefHeight="500.0"
+          prefWidth="800.0"
+          xmlns="http://javafx.com/javafx/17"
+          fx:controller="com.calculator.controller.Controller">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="400.0"/>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="400.0"/>
@@ -16,7 +18,7 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
     </rowConstraints>
     <children>
-        <GridPane fx:id="numbers" GridPane.rowIndex="2">
+        <GridPane GridPane.rowIndex="2">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
@@ -47,9 +49,11 @@
                 <Button mnemonicParsing="false" onAction="#mathInput" prefHeight="40.0" prefWidth="90.0" text="6"
                         GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1"
                         GridPane.valignment="CENTER"/>
-            <Button mnemonicParsing="false" onAction="#mathInput" prefHeight="40.0" prefWidth="90.0" text="9" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-         </children>
-      </GridPane>
+                <Button mnemonicParsing="false" onAction="#mathInput" prefHeight="40.0" prefWidth="90.0" text="9"
+                        GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2"
+                        GridPane.valignment="CENTER"/>
+            </children>
+        </GridPane>
         <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
@@ -67,9 +71,8 @@
                 <Button mnemonicParsing="false" onAction="#mathInput" prefHeight="40.0" prefWidth="90.0" text="\%"
                         GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER"/>
                 <Button id="variableBtn" mnemonicParsing="false" onAction="#mathInput" prefHeight="40.0"
-                        prefWidth="90.0"
-                        text="X" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1"
-                        GridPane.valignment="CENTER"/>
+                        prefWidth="90.0" text="X" GridPane.columnIndex="1" GridPane.halignment="CENTER"
+                        GridPane.rowIndex="1" GridPane.valignment="CENTER"/>
                 <Button mnemonicParsing="false" onAction="#mathInput" prefHeight="40.0" prefWidth="90.0" text="+"
                         GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
                 <Button mnemonicParsing="false" onAction="#mathInput" prefHeight="40.0" prefWidth="90.0" text="0"
@@ -81,88 +84,48 @@
                         GridPane.valignment="CENTER"/>
                 <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
                         mnemonicParsing="false" onAction="#deleteAll" prefHeight="40.0" prefWidth="220.0"
-                        style="-fx-background-color: #FF5555;" text="DELETE INPUT" GridPane.columnIndex="1"
+                        style="-fx-background-color: #FF9999;" text="DELETE INPUT" GridPane.columnIndex="1"
                         GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER"
-                        GridPane.rowIndex="2"
-                        GridPane.valignment="CENTER" GridPane.vgrow="NEVER"/>
+                        GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="NEVER"/>
             </children>
         </GridPane>
-        <GridPane GridPane.rowIndex="1">
+        <GridPane prefHeight="166.0" prefWidth="523.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             </rowConstraints>
             <children>
-                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="340.0" text="Multiply"
-                        GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
-                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="340.0" text="Divide"
-                        GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER"/>
-                <GridPane GridPane.rowIndex="2">
+                <GridPane prefHeight="56.0" prefWidth="406.0" GridPane.rowIndex="1">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="586.3999633789062" minWidth="10.0"
+                                           prefWidth="586.3999633789062"/>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="395.20001220703125" minWidth="10.0"
+                                           prefWidth="213.60003662109375"/>
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                     </rowConstraints>
                     <children>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="160.0" text="Add"
-                                GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
-                            <GridPane.margin>
-                                <Insets right="10.0"/>
-                            </GridPane.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="160.0" text="Substract"
-                                GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
-                            <GridPane.margin>
-                                <Insets left="10.0"/>
-                            </GridPane.margin>
-                        </Button>
+                        <Button onAction="#calculate" mnemonicParsing="false" prefHeight="40.0" prefWidth="145.0"
+                                text="EVALUATE" GridPane.columnIndex="1"/>
+                        <ComboBox fx:id="combobox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+                                  minWidth="-Infinity" prefHeight="50.0" prefWidth="450.0" promptText="Choose operation"
+                                  GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
                     </children>
                 </GridPane>
-            </children>
-        </GridPane>
-        <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            </rowConstraints>
-            <children>
-                <Button mnemonicParsing="false" onAction="#calculate" prefHeight="40.0" prefWidth="340.0" text="="
-                        GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER"/>
-                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="340.0" text="Switch input box"
-                        GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER"/>
-                <GridPane>
-                    <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    </rowConstraints>
-                    <children>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="160.0" text="Integrate"
-                                GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
-                            <GridPane.margin>
-                                <Insets left="10.0"/>
-                            </GridPane.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="160.0" text="Derive"
-                                GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
-                            <GridPane.margin>
-                                <Insets right="10.0"/>
-                            </GridPane.margin>
-                        </Button>
-                    </children>
-                </GridPane>
+                <Label fx:id="result" prefHeight="30.0" prefWidth="665.0"
+                       style="-fx-background-color: #DCDCDC; -fx-background-radius: 10;" text="Result"
+                       GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                    <GridPane.margin>
+                        <Insets/>
+                    </GridPane.margin>
+                    <padding>
+                        <Insets left="20.0"/>
+                    </padding>
+                </Label>
             </children>
         </GridPane>
         <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0"
@@ -177,21 +140,27 @@
                 <Insets top="30.0"/>
             </GridPane.margin>
         </Label>
-        <Label fx:id="output" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-               onMouseClicked="#changeOutput" prefHeight="20.0" prefWidth="320.0"
-               style="-fx-background-color: #B4B4B4; -fx-background-radius: 10" text="polynom1" GridPane.columnIndex="1"
-               GridPane.halignment="CENTER" GridPane.valignment="TOP">
+        <Label fx:id="input1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+               onMouseClicked="#changeOutput" prefHeight="30.0" prefWidth="320.0"
+               style="-fx-background-color: #B4B4B4; -fx-background-radius: 10" text="polynomial1"
+               GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="TOP">
             <GridPane.margin>
                 <Insets top="30.0"/>
             </GridPane.margin>
+            <padding>
+                <Insets left="20.0"/>
+            </padding>
         </Label>
-        <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-               onMouseClicked="#changeOutput" prefHeight="20.0" prefWidth="320.0"
-               style="-fx-background-color: #DCDCDC; -fx-background-radius: 10" text="polynom2" GridPane.columnIndex="1"
-               GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
+        <Label fx:id="input2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+               onMouseClicked="#changeOutput" prefHeight="30.0" prefWidth="320.0"
+               style="-fx-background-color: #DCDCDC; -fx-background-radius: 10" text="polynomial2"
+               GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
             <GridPane.margin>
                 <Insets bottom="30.0"/>
             </GridPane.margin>
+            <padding>
+                <Insets left="20.0"/>
+            </padding>
         </Label>
     </children>
 </GridPane>
