--- a/src/main/resources/com/calculator/calculator-view.fxml
+++ b/src/main/resources/com/calculator/calculator-view.fxml
@@ -4,9 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="500.0" maxWidth="800.0" minHeight="500.0" minWidth="800.0"
-          prefHeight="500.0"
-          prefWidth="800.0"
-          xmlns="http://javafx.com/javafx/17"
+          prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17"
           fx:controller="com.calculator.controller.Controller">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="400.0"/>
@@ -67,8 +65,6 @@
             </rowConstraints>
             <children>
                 <Button mnemonicParsing="false" onAction="#delete" prefHeight="40.0" prefWidth="90.0" text="DEL"
-                        GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER"/>
-                <Button mnemonicParsing="false" onAction="#mathInput" prefHeight="40.0" prefWidth="90.0" text="\%"
                         GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER"/>
                 <Button id="variableBtn" mnemonicParsing="false" onAction="#mathInput" prefHeight="40.0"
                         prefWidth="90.0" text="X" GridPane.columnIndex="1" GridPane.halignment="CENTER"
@@ -82,11 +78,11 @@
                 <Button mnemonicParsing="false" onAction="#mathInput" prefHeight="40.0" prefWidth="90.0" text="."
                         GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1"
                         GridPane.valignment="CENTER"/>
-                <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-                        mnemonicParsing="false" onAction="#deleteAll" prefHeight="40.0" prefWidth="220.0"
-                        style="-fx-background-color: #FF9999;" text="DELETE INPUT" GridPane.columnIndex="1"
-                        GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER"
-                        GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="NEVER"/>
+                <Button alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+                        minWidth="-Infinity" mnemonicParsing="false" onAction="#deleteAll" prefHeight="40.0"
+                        prefWidth="350.0" style="-fx-background-color: #FF9999;" text="DELETE INPUT"
+                        GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="2"
+                        GridPane.valignment="CENTER"/>
             </children>
         </GridPane>
         <GridPane prefHeight="166.0" prefWidth="523.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
@@ -109,7 +105,7 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                     </rowConstraints>
                     <children>
-                        <Button onAction="#calculate" mnemonicParsing="false" prefHeight="40.0" prefWidth="145.0"
+                        <Button mnemonicParsing="false" onAction="#calculate" prefHeight="40.0" prefWidth="145.0"
                                 text="EVALUATE" GridPane.columnIndex="1"/>
                         <ComboBox fx:id="combobox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
                                   minWidth="-Infinity" prefHeight="50.0" prefWidth="450.0" promptText="Choose operation"
@@ -141,7 +137,7 @@
             </GridPane.margin>
         </Label>
         <Label fx:id="input1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-               onMouseClicked="#changeOutput" prefHeight="30.0" prefWidth="320.0"
+               onMouseClicked="#changeInput" prefHeight="30.0" prefWidth="320.0"
                style="-fx-background-color: #B4B4B4; -fx-background-radius: 10" text="polynomial1"
                GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="TOP">
             <GridPane.margin>
@@ -152,7 +148,7 @@
             </padding>
         </Label>
         <Label fx:id="input2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-               onMouseClicked="#changeOutput" prefHeight="30.0" prefWidth="320.0"
+               onMouseClicked="#changeInput" prefHeight="30.0" prefWidth="320.0"
                style="-fx-background-color: #DCDCDC; -fx-background-radius: 10" text="polynomial2"
                GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
             <GridPane.margin>
